# sshlist

./: .gitignore  .screen.py.swp  .sshlist.py.swp  LICENSE  README.md  pyproject.toml  screen.py  setup.py  sshlist.py
sshlist/: .sshlist.py.swn  screen.py  sshlist.py
